--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             </p>
 
             <div class="languages-available">
+                <p class="languages-list">Languages Available</p>
                 <div class="languages">
                     <img src="Images/flag-of-France.png" alt="Flag-of-France">
                     <img src="Images/flag-of-Greece.png" alt="Flag-of-Greece">
