--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 
     <main>
         <div class="container">
+            <h2 class="main-header">Need a language partner?</h2>
+            <p class="setup-explination">
+                Language Partners is an online platform that connects two or more language learners together to make the language learning process fun and amazing. 
+                Through Language Partners, you will be able to meet different types of people all over the world studying the same languages you are learning. In addition to being able to study together on this platform, Language partners also offers language learners the abilty to unwind and just get to know each other by playing games and/or chathing through our many different chat rooms. 
+            </p>
+
             <h1 class="main-logo">
                 Let's be language learning partners!
             </h1>
@@ -47,11 +53,6 @@
                 </article>
 
             </div>
-
-            <p class="setup-explination">
-                Language Partners is an online platform that connects two or more language learners together to make the language learning process fun and amazing. 
-                Through Language Partners, you will be able to meet different types of people all over the world studying the same languages you are learning. In addition to being able to study together on this platform, Language partners also offers language learners the abilty to unwind and just get to know each other by playing games and/or chathing through our many different chat rooms. 
-            </p>
 
             <div class="languages-available">
                 <p class="languages-list">Languages Available</p>
