--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <h2 class="article-title">TOP 10 BENEFITS OF LEARNING A FOREIGN LANGUAGE</h2> 
                     <p class="article-info">By: Eton Institute</p>
                     <p class="article-intro">In a globalized world, where mobility is facilitated, learning a language is a wonderful benefit. Not only does it help when traveling, it is also a great advantage for studying in general and for career prospects abroad.</p>
-                    <a href="https://etoninstitute.com/blog/top-10-benefits-of-learning-a-foreign-language" class="article-link">Continue reading</a>
+                    <a href="https://etoninstitute.com/blog/top-10-benefits-of-learning-a-foreign-language" class="article-link">Continue reading...</a>
                 </article>
 
                 <article class="lang-learning-tips">
@@ -50,7 +50,7 @@
                     <h2 class="article-title">10 Tips To Learn A New Language</h2> 
                     <p class="article-info">By: Binati Sheth</p>
                     <p class="article-intro">The ability to communicate precisely is why homo sapiens survived for so long against all odds. If you are someone who wishes to understand something about a culture different from yours, learning a language foreign to yours is the easiest thing you could do.</p>
-                    <a href="https://medium.com/swap-language/10-tips-to-learn-a-new-language-1eaca69909d2" class="article-link">Continue reading</a>
+                    <a href="https://medium.com/swap-language/10-tips-to-learn-a-new-language-1eaca69909d2" class="article-link">Continue reading...</a>
                 </article>
 
             </div>
