--- a/index.html
+++ b/index.html
@@ -26,33 +26,35 @@
     <main>
         <div class="container">
             
-            <h2 class="main-header">Need a language partner?</h2>
-            <p class="setup-explination">
-                Language Partners is an online platform that connects two or more language learners together to make the language learning process fun and amazing. 
-                Through Language Partners, you will be able to meet different types of people all over the world studying the same languages you are learning. In addition to being able to study together on this platform, Language partners also offers language learners the abilty to unwind and just get to know each other by playing games and/or chathing through our many different chat rooms. 
-            </p>
+            <div class="main-container">
+                <h2 class="main-header">Need a language partner?</h2>
+                <p class="setup-explination">
+                    Language Partners is an online platform that connects two or more language learners together to make the language learning process fun and amazing. 
+                    Through Language Partners, you will be able to meet different types of people all over the world studying the same languages you are learning. In addition to being able to study together on this platform, Language partners also offers language learners the abilty to unwind and just get to know each other by playing games and/or chathing through our many different chat rooms. 
+                </p>
 
-            <h1 class="main-logo">
-                Let's be language learning partners!
-            </h1>
+                <h1 class="main-logo">
+                    Let's be language learning partners!
+                </h1>
 
-            <div class="helpful-articles">
-                <article class="lang-learning-benefits">
-                    <img src="./Images/etonI.jpg" alt="Why learn a different language" class="article-image">
-                    <h2 class="article-title">TOP 10 BENEFITS OF LEARNING A FOREIGN LANGUAGE</h2> 
-                    <p class="article-info">By: Eton Institute</p>
-                    <p class="article-intro">In a globalized world, where mobility is facilitated, learning a language is a wonderful benefit. Not only does it help when traveling, it is also a great advantage for studying in general and for career prospects abroad.</p>
-                    <a href="https://etoninstitute.com/blog/top-10-benefits-of-learning-a-foreign-language" class="article-link">Continue reading...</a>
-                </article>
+                <div class="helpful-articles">
+                    <article class="lang-learning-benefits">
+                        <img src="./Images/etonI.jpg" alt="Why learn a different language" class="article-image">
+                        <h2 class="article-title">TOP 10 BENEFITS OF LEARNING A FOREIGN LANGUAGE</h2> 
+                        <p class="article-info">By: Eton Institute</p>
+                        <p class="article-intro">In a globalized world, where mobility is facilitated, learning a language is a wonderful benefit. Not only does it help when traveling, it is also a great advantage for studying in general and for career prospects abroad.</p>
+                        <a href="https://etoninstitute.com/blog/top-10-benefits-of-learning-a-foreign-language" class="article-link">Continue reading...</a>
+                    </article>
 
-                <article class="lang-learning-tips">
-                    <img src="./Images/10tips.jpeg" alt="10 tips to learn a different language" class="article-image">
-                    <h2 class="article-title">10 Tips To Learn A New Language</h2> 
-                    <p class="article-info">By: Binati Sheth</p>
-                    <p class="article-intro">The ability to communicate precisely is why homo sapiens survived for so long against all odds. If you are someone who wishes to understand something about a culture different from yours, learning a language foreign to yours is the easiest thing you could do.</p>
-                    <a href="https://medium.com/swap-language/10-tips-to-learn-a-new-language-1eaca69909d2" class="article-link">Continue reading...</a>
-                </article>
+                    <article class="lang-learning-tips">
+                        <img src="./Images/10tips.jpeg" alt="10 tips to learn a different language" class="article-image">
+                        <h2 class="article-title">10 Tips To Learn A New Language</h2> 
+                        <p class="article-info">By: Binati Sheth</p>
+                        <p class="article-intro">The ability to communicate precisely is why homo sapiens survived for so long against all odds. If you are someone who wishes to understand something about a culture different from yours, learning a language foreign to yours is the easiest thing you could do.</p>
+                        <a href="https://medium.com/swap-language/10-tips-to-learn-a-new-language-1eaca69909d2" class="article-link">Continue reading...</a>
+                    </article>
 
+                </div>
             </div>
 
             <div class="languages-available">
