--- a/form.html
+++ b/form.html
@@ -24,7 +24,7 @@
     </header>
 
     <main>
-        <div class="container">
+        <div class="form-container">
             <h2>Find a language partner today</h2>
             <p>Register Today</p>
             <p>Learning a language become a lot more exciting and interactive with someone else!</p>
@@ -39,5 +39,7 @@
         </div>
     </main>
     <footer></footer>
+
+    <script src="index.js"></script>
 </body>
 </html>
