--- a/form.html
+++ b/form.html
@@ -29,7 +29,7 @@
             <p>Register Today</p>
             <p>Learning a language become a lot more exciting and interactive with someone else!</p>
 
-            <form id="partner-signup" class="partner-signup" action="#" method="POST">
+            <form id="partner-signup" class="partner-signup" action="#" method="">
                 <input name="fullname" type="text" placeholder="full name" required>
                 <input name="email" type="email" placeholder="email" required>
                 <textarea id="languagePartner" name="languagePartner" rows="3" cols="33" required placeholder="Briefly describe your ideal language partner."></textarea>
