--- a/form.html
+++ b/form.html
@@ -25,9 +25,9 @@
 
     <main>
         <div class="form-container">
-            <h2>Find a language partner today</h2>
-            <p>Register Today</p>
-            <p>Learning a language become a lot more exciting and interactive with someone else!</p>
+            <h2>Find a language partner!</h2>
+            <p class="prompt">Register Today</p>
+            <p class="form-info">Learning a language become a lot more exciting and interactive with someone else!</p>
 
             <form id="partner-signup" class="partner-signup" action="#" method="">
                 <input name="fullname" type="text" placeholder="full name" required>
