--- a/form.html
+++ b/form.html
@@ -27,12 +27,12 @@
         <div class="form-container">
             <h2>Find a language partner!</h2>
             <p class="prompt">Register Today</p>
-            <p class="form-info">Learning a language become a lot more exciting and interactive with someone else!</p>
+            <p class="form-info">Learning a language becomes a lot more exciting and interactive with someone else!</p>
 
             <form id="partner-signup" class="partner-signup" action="#" method="">
                 <input name="fullname" type="text" placeholder="full name" required>
                 <input name="email" type="email" placeholder="email" required>
-                <textarea id="languagePartner" name="languagePartner" rows="3" cols="33" required placeholder="Briefly describe your ideal language partner."></textarea>
+                <textarea id="languagePartner" name="languagePartner" required placeholder="Briefly describe your ideal language partner."></textarea>
                 <button class="btn register" type="submit">Register</button>
             </form>
             
