--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
         <nav>
             <ul>
-                <li><a href="index.html" class="home-page current-page">Home</a></li>
-                <li><a href="form.html" class="sign-up">Sign-up</a></li>
+                <li><a href="index.html" id="home" class="home-page">Home</a></li>
+                <li><a href="form.html" id="signUp" class="sign-up">Sign-up</a></li>
             </ul>
         </nav>
     </header>
@@ -83,5 +83,6 @@
         </div>
     </main>
     <footer></footer>
+    <script src="index.js"></script>
 </body>
 </html>
