--- a/index.html
+++ b/index.html
@@ -78,11 +78,10 @@
                 <div class="languages">
                     <img src="Images/flag-of-Ethiopia.png" alt="Flag-of-Ethiopia">
                 </div>
-                <p><a href="#" class="more-languages">More...</a></p>
+                <p><a href="form.html" class="more-languages">More...</a></p>
             </div>  <!--Div to close languages available DIV--> 
         </div>
     </main>
-    <footer></footer>
     <script src="index.js"></script>
 </body>
 </html>
